<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecordWav</string>
    <string name="action_settings">Settings</string>
    
    <string name="app_info">This is a sample application to record audio.\n\nThe recordings are saved in /sdcard/media/audio/music as uncompressed .wav files\n</string>
    <string name="buffer_size_header">Buffer size:</string>
    <string name="sample_rate_header">Sample rate:</string>    

    <string name="choose_format_title">Choose Audio Format</string>
	<string name="start_recording">Start Recording</string>
	<string name="stop_recording">Stop</string>
	<string name="audio_format">Format</string>
	
	<string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>
    
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="file_save_hint">Enter filename (.wav extension not required)</string>   

</resources>
